[package]
name = "picoboot"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Communicating with Raspberry Pico/RP2040/RP2350 in BOOTSEL mode over USB"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/piersfinlayson/picoboot"
repository = "https://github.com/piersfinlayson/picoboot.git"
keywords = ["raspberry-pi", "rp2040", "rp2350", "picoboot", "picotool"]
categories = ["embedded", "hardware-support"]
readme = "README.md"

[lib]
name = "picoboot"
path = "src/lib.rs"

[features]
default = ["tokio", "logging"]
tokio = ["nusb/tokio"]
smol = ["nusb/smol"]
logging = ["deku/logging"]

[dependencies]
deku = "0.20"
log = "0.4"
nusb = "0.2"
rustix = "1.1"
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uf2-decode = "0.2"
